--- a/index_bellybutton.html
+++ b/index_bellybutton.html
@@ -13,11 +13,9 @@
 
   <div class="container">
     <div class="row">
-      
       <div class="col-md-12 jumbotron text-center">
-        <h1 style="color: blue;">Belly Button Biodiversity Dashboard</h1>
-        <h2 style="color:coral;">Use the interactive charts below to explore the dataset</h2>
-        <h3 style="color: blue;">Challenge 12!</h3>
+        <h1>Belly Button Biodiversity Dashboard</h1>
+        <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
@@ -34,10 +32,10 @@
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-5">
         <div id="bar"></div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div id="gauge"></div>
       </div>
     </div>
@@ -48,13 +46,10 @@
     </div>
   </div>
 
-  <footer class="footer" style="text-align: center;">
-    <img src="HappyFaceBW.jpeg" class="rounded mx-auto d-block" alt="HappyFaceBW.jpeg">
-    <span class="bottom">&copy; Susana Correia 2021</span>
-  </footer>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="plots.js"></script>
 
 </body>
+
+</html>
